--- a/index.html
+++ b/index.html
@@ -8,7 +8,20 @@
 </head>
 <body>
     <div class="outer">
-        yuiukii
+       <div class="box_row">
+            <div class="box border_red">
+                <div class="circle" style="border: 5px solio red;"></div>
+                <div class="circle" style="border: 5px solio red;"></div>
+                <div class="circle" id="right_red" style="border: 5px solio red;"></div>
+                <div class="circle"  id="right_red1" style="border: 5px solio red;"></div>
+            </div>
+            <div class="box border_green">
+                <div class="circle" style="border: 5px solio green;"></div>
+                <div class="circle" style="border: 5px solio green;"></div>
+                <div class="circle" style="border: 5px solio green;"></div>
+                <div class="circle" style="border: 5px solio green;"></div>
+            </div>
+       </div>
     </div>
 </body>
 </html>
