--- a/index.html
+++ b/index.html
@@ -10,17 +10,51 @@
     <div class="outer">
        <div class="box_row">
             <div class="box border_red">
-                <div class="circle" style="border: 5px solio red;"></div>
-                <div class="circle" style="border: 5px solio red;"></div>
-                <div class="circle" id="right_red" style="border: 5px solio red;"></div>
-                <div class="circle"  id="right_red1" style="border: 5px solio red;"></div>
+                <div class="circle" style="border: 5px solid red;"></div>
+                <div class="circle" style="border: 5px solid red;"></div>
+                <div class="circle" id="right_red" style="border: 5px solid red;"></div>
+                <div class="circle"  id="right_red1" style="border: 5px solid red;"></div>
+            </div>       
+       </div>
+       <div class="v_lad">
+            <div class="v_lad_row">
+                <div class="cell red"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
             </div>
-            <div class="box border_green">
-                <div class="circle" style="border: 5px solio green;"></div>
-                <div class="circle" style="border: 5px solio green;"></div>
-                <div class="circle" style="border: 5px solio green;"></div>
-                <div class="circle" style="border: 5px solio green;"></div>
+            <div class="v_lad_row">
+                <div class="cell red"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
             </div>
+            <div class="v_lad_row">
+                <div class="cell red"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
+            </div>
+            <div class="v_lad_row">
+                <div class="cell red"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
+            </div>
+            <div class="v_lad_row">
+                <div class="cell red"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
+            </div>
+            <div class="v_lad_row">
+                <div class="cell red"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
+            </div>
+       </div>
+       <div class="box_row">
+        <div class="box border_green">
+            <div class="circle" style="border: 5px solid green;"></div>
+            <div class="circle" style="border: 5px solid green;"></div>
+            <div class="circle" style="border: 5px solid green;"></div>
+            <div class="circle" style="border: 5px solid green;"></div>
+        </div>      
        </div>
     </div>
 </body>
